force-app/main/default/objects/Product__c/fields/Base_UOM__c.field-meta.xml
<CustomField>
    <fullName>Base_UOM__c</fullName>
    <label>Base_UOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>