force-app/main/default/objects/Product__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Yamuna</fullName>
            </value>
            <value>
                <fullName>Delite</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Parrot</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>