force-app/main/default/objects/Product__c/fields/CGST_Code__c.field-meta.xml
<CustomField>
    <fullName>CGST_Code__c</fullName>
    <label>CGST Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>