force-app/main/default/objects/Product__c/fields/Chapter_ID1__c.field-meta.xml
<CustomField>
    <fullName>Chapter_ID1__c</fullName>
    <label>Chapter ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>