force-app/main/default/objects/Product__c/fields/Chapter_ID__c.field-meta.xml
<CustomField>
    <fullName>Chapter_ID__c</fullName>
    <label>Chapter ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>