force-app/main/default/objects/Product__c/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <label>Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>