force-app/main/default/objects/Product__c/fields/IGST_Code__c.field-meta.xml
<CustomField>
    <fullName>IGST_Code__c</fullName>
    <label>IGST Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>