force-app/main/default/objects/Product__c/fields/Im__c.field-meta.xml
<CustomField>
    <fullName>Im__c</fullName>
    <label>Im</label>
    <length>255</length>
    <type>Text</type>
</CustomField>