force-app/main/default/objects/Product__c/fields/Is_Product_Schemed__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Schemed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Product Schemed</label>
    <type>Checkbox</type>
</CustomField>