force-app/main/default/objects/Product__c/fields/Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Cost__c</fullName>
    <label>Item Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>