force-app/main/default/objects/Product__c/fields/KW__c.field-meta.xml
<CustomField>
    <fullName>KW__c</fullName>
    <label>KW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>