force-app/main/default/objects/Product__c/fields/List_Price1__c.field-meta.xml
<CustomField>
    <fullName>List_Price1__c</fullName>
    <label>List Price1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>