force-app/main/default/objects/Product__c/fields/Product_Category1__c.field-meta.xml
<CustomField>
    <fullName>Product_Category1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>