force-app/main/default/objects/Product__c/fields/Product_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Name__c</fullName>
    <formula>Product_Category1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_Category_Name</label>
    <type>Text</type>
</CustomField>