force-app/main/default/objects/Product__c/fields/Product_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Date__c</fullName>
    <label>Product Date</label>
    <type>Date</type>
</CustomField>