force-app/main/default/objects/Product__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IMAGE(Product_Image_Url__c , &apos;Image&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>