force-app/main/default/objects/Product__c/fields/Product_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Url__c</fullName>
    <label>Product Image Url</label>
    <type>Url</type>
</CustomField>