force-app/main/default/objects/Product__c/fields/Product_No__c.field-meta.xml
<CustomField>
    <fullName>Product_No__c</fullName>
    <label>Product No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>