force-app/main/default/objects/Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finished Goods</fullName>
                <default>true</default>
                <label>Finished Goods</label>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Bar Slice</fullName>
            </value>
            <value>
                <fullName>Surekha</fullName>
            </value>
            <value>
                <fullName>Chakki Atta</fullName>
            </value>
            <value>
                <fullName>Round</fullName>
            </value>
            <value>
                <fullName>Rect. Slice</fullName>
            </value>
            <value>
                <fullName>CUP 4*1</fullName>
            </value>
            <value>
                <fullName>CUP 6*1</fullName>
            </value>
            <value>
                <fullName>JACK FRUIT</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>Single Slice</fullName>
            </value>
            <value>
                <fullName>4 X 1</fullName>
            </value>
            <value>
                <fullName>Broken Rice</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Capital Items</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Finished Components</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Gift Items</fullName>
            </value>
            <value>
                <fullName>License export</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
            <value>
                <fullName>Maintenance Items</fullName>
            </value>
            <value>
                <fullName>Non Inventory Item</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Packing Material</fullName>
            </value>
            <value>
                <fullName>Purchase Items</fullName>
            </value>
            <value>
                <fullName>Raw Material</fullName>
            </value>
            <value>
                <fullName>Scrap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>