force-app/main/default/objects/Product__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <label>ProductCategory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>