force-app/main/default/objects/Product__c/fields/ProductCategory_Code__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory_Code__c</fullName>
    <label>ProductCategory Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>