force-app/main/default/objects/Product__c/fields/QR_Code2__c.field-meta.xml
<CustomField>
    <fullName>QR_Code2__c</fullName>
    <formula>IMAGE(&apos;https://api.qrserver.com/v1/create-qr-code/?size=25x18&amp;data=https://fingertip-fsp-dev-ed.develop.my.salesforce.com/&apos;&amp; CASESAFEID(Id ),&apos;Scan QR code to open record in mobile.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>