force-app/main/default/objects/Product__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&apos;https://qrcode.tec-it.com/API/QRCode?cht=qr&amp;size=medium&amp;dpi=120&amp;data=https://fingertip-fsp-dev-ed.develop.my.salesforce.com/lightning/r/Product__c/&apos;&amp; CASESAFEID(Id)&amp;&apos;/view&apos;,&apos;Scan QR&apos;,150,150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code_Not_In_Use</label>
    <type>Text</type>
</CustomField>