force-app/main/default/objects/Product__c/fields/Selling_Category__c.field-meta.xml
<CustomField>
    <fullName>Selling_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Category</label>
    <referenceTo>Selling_Category__c</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>