force-app/main/default/objects/Product__c/fields/SGST_Code__c.field-meta.xml
<CustomField>
    <fullName>SGST_Code__c</fullName>
    <label>SGST Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>