force-app/main/default/objects/Product__c/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <label>size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30B</fullName>
            </value>
            <value>
                <fullName>32C</fullName>
            </value>
            <value>
                <fullName>32B</fullName>
            </value>
            <value>
                <fullName>32D</fullName>
            </value>
            <value>
                <fullName>34B</fullName>
            </value>
            <value>
                <fullName>34C</fullName>
            </value>
            <value>
                <fullName>34D</fullName>
            </value>
            <value>
                <fullName>36B</fullName>
            </value>
            <value>
                <fullName>36C</fullName>
            </value>
            <value>
                <fullName>36D</fullName>
            </value>
            <value>
                <fullName>38B</fullName>
            </value>
            <value>
                <fullName>38C</fullName>
            </value>
            <value>
                <fullName>38D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>