force-app/main/default/objects/Product__c/fields/SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Code__c</fullName>
    <externalId>true</externalId>
    <label>SKU Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>