force-app/main/default/objects/Product__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Target_Field</valueSetName>
    </valueSet>
</CustomField>