force-app/main/default/objects/Product__c/fields/Uom_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Uom_Conversion__c</fullName>
    <label>Uom Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>