force-app/main/default/objects/Product__c/fields/Varient__c.field-meta.xml
<CustomField>
    <fullName>Varient__c</fullName>
    <label>Varient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cashew Almond</fullName>
            </value>
            <value>
                <fullName>Butter</fullName>
            </value>
            <value>
                <fullName>Matta</fullName>
            </value>
            <value>
                <fullName>Rice Flakes</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Pineapple</fullName>
            </value>
            <value>
                <fullName>Chocolate Cen. Fill</fullName>
            </value>
            <value>
                <fullName>Strawberry</fullName>
            </value>
            <value>
                <fullName>Chocolate</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>Cattle Feed</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Parotta Maida</fullName>
            </value>
            <value>
                <fullName>Unroasted Rava</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Butterscotch</fullName>
            </value>
            <value>
                <fullName>Bansi</fullName>
            </value>
            <value>
                <fullName>Sweet</fullName>
            </value>
            <value>
                <fullName>Fruity</fullName>
            </value>
            <value>
                <fullName>Bengalgram</fullName>
            </value>
            <value>
                <fullName>Milk &amp; Sugar</fullName>
            </value>
            <value>
                <fullName>Orange Chocolate</fullName>
            </value>
            <value>
                <fullName>Pineapple Chocolate</fullName>
            </value>
            <value>
                <fullName>Vanilla</fullName>
            </value>
            <value>
                <fullName>Veg. Milk</fullName>
            </value>
            <value>
                <fullName>Veg. Orange</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Whole Wheat</fullName>
            </value>
            <value>
                <fullName>Chocochips</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>