force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Description__c</columns>
    <columns>SKU_Code__c</columns>
    <columns>MRP__c</columns>
    <columns>Net_Weight__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>